fix for Issue #168 - search box wraps in IE6

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -103,7 +103,7 @@ img {
 	float: left;
 	font-size: 0.9em;
 	height: 18px;
-	width: 180px;
+	width: 174px;
 	margin: 6px 0 0 0;
 }
 
